Syntax Analysis/y.output
Terminals unused in grammar

    RESERVED


Grammar

    0 $accept: Program $end

    1 Program: PACKAGE IDENTIFIER SEMICOLON Declarations

    2 Declarations: Declarations FuncDecl SEMICOLON
    3             | Declarations VarDecl SEMICOLON
    4             | ε

    5 VarDecl: VAR VarSpec
    6        | VAR LPAR VarSpec SEMICOLON RPAR

    7 VarSpec: IDENTIFIER Type
    8        | IDENTIFIER COMMA VarSpec

    9 Type: INT
   10     | FLOAT32
   11     | BOOL
   12     | STRING

   13 FuncDecl: FUNC IDENTIFIER LPAR OptFuncParams RPAR OptType FuncBody

   14 OptFuncParams: FuncParams
   15              | ε

   16 OptType: Type
   17        | ε

   18 FuncParams: IDENTIFIER Type
   19           | FuncParams COMMA IDENTIFIER Type

   20 FuncBody: LBRACE VarsAndStatements RBRACE

   21 VarsAndStatements: VarsAndStatements SEMICOLON
   22                  | VarsAndStatements VarDecl SEMICOLON
   23                  | VarsAndStatements Statement SEMICOLON
   24                  | ε

   25 Statement: IDENTIFIER ASSIGN Expr
   26          | LBRACE StarStatementSc RBRACE
   27          | IF Expr LBRACE StarStatementSc RBRACE OptElse
   28          | FOR OptExpr LBRACE StarStatementSc RBRACE
   29          | RETURN OptExpr
   30          | FuncInvocation
   31          | ParseArgs
   32          | PRINT LPAR Expr RPAR
   33          | PRINT LPAR STRLIT RPAR
   34          | error

   35 StarStatementSc: StarStatementSc Statement SEMICOLON
   36                | ε

   37 OptElse: ELSE LBRACE StarStatementSc RBRACE
   38        | ε

   39 OptExpr: Expr
   40        | ε

   41 ParseArgs: IDENTIFIER COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR
   42          | IDENTIFIER COMMA BLANKID ASSIGN PARSEINT LPAR error RPAR

   43 FuncInvocation: IDENTIFIER LPAR PosExpr RPAR
   44               | IDENTIFIER LPAR error RPAR

   45 PosExpr: Expr
   46        | Expr COMMA PosExpr
   47        | ε

   48 Expr: Expr OR Expr
   49     | Expr AND Expr
   50     | Expr LT Expr
   51     | Expr GT Expr
   52     | Expr EQ Expr
   53     | Expr NE Expr
   54     | Expr LE Expr
   55     | Expr GE Expr
   56     | Expr PLUS Expr
   57     | Expr MINUS Expr
   58     | Expr STAR Expr
   59     | Expr DIV Expr
   60     | Expr MOD Expr
   61     | MINUS Expr
   62     | NOT Expr
   63     | PLUS Expr
   64     | NATURAL
   65     | DECIMAL
   66     | IDENTIFIER
   67     | FuncInvocation
   68     | LPAR Expr RPAR
   69     | LPAR error RPAR


Terminals, with rules where they appear

    $end (0) 0
    error (256) 34 42 44 69
    SEMICOLON (258) 1 2 3 6 21 22 23 35
    COMMA (259) 8 19 41 42 46
    STAR (260) 58
    DIV (261) 59
    MINUS (262) 57 61
    PLUS (263) 56 63
    EQ (264) 52
    GE (265) 55
    GT (266) 51
    LBRACE (267) 20 26 27 28 37
    LE (268) 54
    LPAR (269) 6 13 32 33 41 42 43 44 68 69
    LSQ (270) 41
    LT (271) 50
    MOD (272) 60
    NE (273) 53
    NOT (274) 62
    AND (275) 49
    OR (276) 48
    PACKAGE (277) 1
    ELSE (278) 37
    FOR (279) 28
    IF (280) 27
    VAR (281) 5 6
    INT (282) 9
    FLOAT32 (283) 10
    BOOL (284) 11
    STRING (285) 12
    PRINT (286) 32 33
    PARSEINT (287) 41 42
    FUNC (288) 13
    CMDARGS (289) 41
    BLANKID (290) 41 42
    RBRACE (291) 20 26 27 28 37
    RPAR (292) 6 13 32 33 41 42 43 44 68 69
    RETURN (293) 29
    RSQ (294) 41
    ASSIGN (295) 25 41 42
    STRLIT <lexeme> (296) 33
    RESERVED <lexeme> (297)
    IDENTIFIER <lexeme> (298) 1 7 8 13 18 19 25 41 42 43 44 66
    NATURAL <lexeme> (299) 64
    DECIMAL <lexeme> (300) 65
    LOW (301)


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    Program <node> (48)
        on left: 1
        on right: 0
    Declarations <node> (49)
        on left: 2 3 4
        on right: 1 2 3
    VarDecl <node> (50)
        on left: 5 6
        on right: 3 22
    VarSpec <node> (51)
        on left: 7 8
        on right: 5 6 8
    Type <node> (52)
        on left: 9 10 11 12
        on right: 7 16 18 19
    FuncDecl <node> (53)
        on left: 13
        on right: 2
    OptFuncParams <node> (54)
        on left: 14 15
        on right: 13
    OptType <node> (55)
        on left: 16 17
        on right: 13
    FuncParams <node> (56)
        on left: 18 19
        on right: 14 19
    FuncBody <node> (57)
        on left: 20
        on right: 13
    VarsAndStatements <node> (58)
        on left: 21 22 23 24
        on right: 20 21 22 23
    Statement <node> (59)
        on left: 25 26 27 28 29 30 31 32 33 34
        on right: 23 35
    StarStatementSc <node> (60)
        on left: 35 36
        on right: 26 27 28 35 37
    OptElse <node> (61)
        on left: 37 38
        on right: 27
    OptExpr <node> (62)
        on left: 39 40
        on right: 28 29
    ParseArgs <node> (63)
        on left: 41 42
        on right: 31
    FuncInvocation <node> (64)
        on left: 43 44
        on right: 30 67
    PosExpr <node> (65)
        on left: 45 46 47
        on right: 43 46
    Expr <node> (66)
        on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
        on right: 25 27 32 39 41 45 46 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 68


State 0

    0 $accept: • Program $end
    1 Program: • PACKAGE IDENTIFIER SEMICOLON Declarations

    PACKAGE  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: PACKAGE • IDENTIFIER SEMICOLON Declarations

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: Program • $end

    $end  shift, and go to state 4


State 3

    1 Program: PACKAGE IDENTIFIER • SEMICOLON Declarations

    SEMICOLON  shift, and go to state 5


State 4

    0 $accept: Program $end •

    $default  accept


State 5

    1 Program: PACKAGE IDENTIFIER SEMICOLON • Declarations
    2 Declarations: • Declarations FuncDecl SEMICOLON
    3             | • Declarations VarDecl SEMICOLON
    4             | ε •

    $default  reduce using rule 4 (Declarations)

    Declarations  go to state 6


State 6

    1 Program: PACKAGE IDENTIFIER SEMICOLON Declarations •  [$end]
    2 Declarations: Declarations • FuncDecl SEMICOLON
    3             | Declarations • VarDecl SEMICOLON
    5 VarDecl: • VAR VarSpec
    6        | • VAR LPAR VarSpec SEMICOLON RPAR
   13 FuncDecl: • FUNC IDENTIFIER LPAR OptFuncParams RPAR OptType FuncBody

    VAR   shift, and go to state 7
    FUNC  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    VarDecl   go to state 9
    FuncDecl  go to state 10


State 7

    5 VarDecl: VAR • VarSpec
    6        | VAR • LPAR VarSpec SEMICOLON RPAR
    7 VarSpec: • IDENTIFIER Type
    8        | • IDENTIFIER COMMA VarSpec

    LPAR        shift, and go to state 11
    IDENTIFIER  shift, and go to state 12

    VarSpec  go to state 13


State 8

   13 FuncDecl: FUNC • IDENTIFIER LPAR OptFuncParams RPAR OptType FuncBody

    IDENTIFIER  shift, and go to state 14


State 9

    3 Declarations: Declarations VarDecl • SEMICOLON

    SEMICOLON  shift, and go to state 15


State 10

    2 Declarations: Declarations FuncDecl • SEMICOLON

    SEMICOLON  shift, and go to state 16


State 11

    6 VarDecl: VAR LPAR • VarSpec SEMICOLON RPAR
    7 VarSpec: • IDENTIFIER Type
    8        | • IDENTIFIER COMMA VarSpec

    IDENTIFIER  shift, and go to state 12

    VarSpec  go to state 17


State 12

    7 VarSpec: IDENTIFIER • Type
    8        | IDENTIFIER • COMMA VarSpec
    9 Type: • INT
   10     | • FLOAT32
   11     | • BOOL
   12     | • STRING

    COMMA    shift, and go to state 18
    INT      shift, and go to state 19
    FLOAT32  shift, and go to state 20
    BOOL     shift, and go to state 21
    STRING   shift, and go to state 22

    Type  go to state 23


State 13

    5 VarDecl: VAR VarSpec •

    $default  reduce using rule 5 (VarDecl)


State 14

   13 FuncDecl: FUNC IDENTIFIER • LPAR OptFuncParams RPAR OptType FuncBody

    LPAR  shift, and go to state 24


State 15

    3 Declarations: Declarations VarDecl SEMICOLON •

    $default  reduce using rule 3 (Declarations)


State 16

    2 Declarations: Declarations FuncDecl SEMICOLON •

    $default  reduce using rule 2 (Declarations)


State 17

    6 VarDecl: VAR LPAR VarSpec • SEMICOLON RPAR

    SEMICOLON  shift, and go to state 25


State 18

    7 VarSpec: • IDENTIFIER Type
    8        | • IDENTIFIER COMMA VarSpec
    8        | IDENTIFIER COMMA • VarSpec

    IDENTIFIER  shift, and go to state 12

    VarSpec  go to state 26


State 19

    9 Type: INT •

    $default  reduce using rule 9 (Type)


State 20

   10 Type: FLOAT32 •

    $default  reduce using rule 10 (Type)


State 21

   11 Type: BOOL •

    $default  reduce using rule 11 (Type)


State 22

   12 Type: STRING •

    $default  reduce using rule 12 (Type)


State 23

    7 VarSpec: IDENTIFIER Type •

    $default  reduce using rule 7 (VarSpec)


State 24

   13 FuncDecl: FUNC IDENTIFIER LPAR • OptFuncParams RPAR OptType FuncBody
   14 OptFuncParams: • FuncParams
   15              | ε •  [RPAR]
   18 FuncParams: • IDENTIFIER Type
   19           | • FuncParams COMMA IDENTIFIER Type

    IDENTIFIER  shift, and go to state 27

    $default  reduce using rule 15 (OptFuncParams)

    OptFuncParams  go to state 28
    FuncParams     go to state 29


State 25

    6 VarDecl: VAR LPAR VarSpec SEMICOLON • RPAR

    RPAR  shift, and go to state 30


State 26

    8 VarSpec: IDENTIFIER COMMA VarSpec •

    $default  reduce using rule 8 (VarSpec)


State 27

    9 Type: • INT
   10     | • FLOAT32
   11     | • BOOL
   12     | • STRING
   18 FuncParams: IDENTIFIER • Type

    INT      shift, and go to state 19
    FLOAT32  shift, and go to state 20
    BOOL     shift, and go to state 21
    STRING   shift, and go to state 22

    Type  go to state 31


State 28

   13 FuncDecl: FUNC IDENTIFIER LPAR OptFuncParams • RPAR OptType FuncBody

    RPAR  shift, and go to state 32


State 29

   14 OptFuncParams: FuncParams •  [RPAR]
   19 FuncParams: FuncParams • COMMA IDENTIFIER Type

    COMMA  shift, and go to state 33

    $default  reduce using rule 14 (OptFuncParams)


State 30

    6 VarDecl: VAR LPAR VarSpec SEMICOLON RPAR •

    $default  reduce using rule 6 (VarDecl)


State 31

   18 FuncParams: IDENTIFIER Type •

    $default  reduce using rule 18 (FuncParams)


State 32

    9 Type: • INT
   10     | • FLOAT32
   11     | • BOOL
   12     | • STRING
   13 FuncDecl: FUNC IDENTIFIER LPAR OptFuncParams RPAR • OptType FuncBody
   16 OptType: • Type
   17        | ε •  [LBRACE]

    INT      shift, and go to state 19
    FLOAT32  shift, and go to state 20
    BOOL     shift, and go to state 21
    STRING   shift, and go to state 22

    $default  reduce using rule 17 (OptType)

    Type     go to state 34
    OptType  go to state 35


State 33

   19 FuncParams: FuncParams COMMA • IDENTIFIER Type

    IDENTIFIER  shift, and go to state 36


State 34

   16 OptType: Type •

    $default  reduce using rule 16 (OptType)


State 35

   13 FuncDecl: FUNC IDENTIFIER LPAR OptFuncParams RPAR OptType • FuncBody
   20 FuncBody: • LBRACE VarsAndStatements RBRACE

    LBRACE  shift, and go to state 37

    FuncBody  go to state 38


State 36

    9 Type: • INT
   10     | • FLOAT32
   11     | • BOOL
   12     | • STRING
   19 FuncParams: FuncParams COMMA IDENTIFIER • Type

    INT      shift, and go to state 19
    FLOAT32  shift, and go to state 20
    BOOL     shift, and go to state 21
    STRING   shift, and go to state 22

    Type  go to state 39


State 37

   20 FuncBody: LBRACE • VarsAndStatements RBRACE
   21 VarsAndStatements: • VarsAndStatements SEMICOLON
   22                  | • VarsAndStatements VarDecl SEMICOLON
   23                  | • VarsAndStatements Statement SEMICOLON
   24                  | ε •

    $default  reduce using rule 24 (VarsAndStatements)

    VarsAndStatements  go to state 40


State 38

   13 FuncDecl: FUNC IDENTIFIER LPAR OptFuncParams RPAR OptType FuncBody •

    $default  reduce using rule 13 (FuncDecl)


State 39

   19 FuncParams: FuncParams COMMA IDENTIFIER Type •

    $default  reduce using rule 19 (FuncParams)


State 40

    5 VarDecl: • VAR VarSpec
    6        | • VAR LPAR VarSpec SEMICOLON RPAR
   20 FuncBody: LBRACE VarsAndStatements • RBRACE
   21 VarsAndStatements: VarsAndStatements • SEMICOLON
   22                  | VarsAndStatements • VarDecl SEMICOLON
   23                  | VarsAndStatements • Statement SEMICOLON
   25 Statement: • IDENTIFIER ASSIGN Expr
   26          | • LBRACE StarStatementSc RBRACE
   27          | • IF Expr LBRACE StarStatementSc RBRACE OptElse
   28          | • FOR OptExpr LBRACE StarStatementSc RBRACE
   29          | • RETURN OptExpr
   30          | • FuncInvocation
   31          | • ParseArgs
   32          | • PRINT LPAR Expr RPAR
   33          | • PRINT LPAR STRLIT RPAR
   34          | • error
   41 ParseArgs: • IDENTIFIER COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR
   42          | • IDENTIFIER COMMA BLANKID ASSIGN PARSEINT LPAR error RPAR
   43 FuncInvocation: • IDENTIFIER LPAR PosExpr RPAR
   44               | • IDENTIFIER LPAR error RPAR

    error       shift, and go to state 41
    SEMICOLON   shift, and go to state 42
    LBRACE      shift, and go to state 43
    FOR         shift, and go to state 44
    IF          shift, and go to state 45
    VAR         shift, and go to state 7
    PRINT       shift, and go to state 46
    RBRACE      shift, and go to state 47
    RETURN      shift, and go to state 48
    IDENTIFIER  shift, and go to state 49

    VarDecl         go to state 50
    Statement       go to state 51
    ParseArgs       go to state 52
    FuncInvocation  go to state 53


State 41

   34 Statement: error •

    $default  reduce using rule 34 (Statement)


State 42

   21 VarsAndStatements: VarsAndStatements SEMICOLON •

    $default  reduce using rule 21 (VarsAndStatements)


State 43

   26 Statement: LBRACE • StarStatementSc RBRACE
   35 StarStatementSc: • StarStatementSc Statement SEMICOLON
   36                | ε •

    $default  reduce using rule 36 (StarStatementSc)

    StarStatementSc  go to state 54


State 44

   28 Statement: FOR • OptExpr LBRACE StarStatementSc RBRACE
   39 OptExpr: • Expr
   40        | ε •  [LBRACE]
   43 FuncInvocation: • IDENTIFIER LPAR PosExpr RPAR
   44               | • IDENTIFIER LPAR error RPAR
   48 Expr: • Expr OR Expr
   49     | • Expr AND Expr
   50     | • Expr LT Expr
   51     | • Expr GT Expr
   52     | • Expr EQ Expr
   53     | • Expr NE Expr
   54     | • Expr LE Expr
   55     | • Expr GE Expr
   56     | • Expr PLUS Expr
   57     | • Expr MINUS Expr
   58     | • Expr STAR Expr
   59     | • Expr DIV Expr
   60     | • Expr MOD Expr
   61     | • MINUS Expr
   62     | • NOT Expr
   63     | • PLUS Expr
   64     | • NATURAL
   65     | • DECIMAL
   66     | • IDENTIFIER
   67     | • FuncInvocation
   68     | • LPAR Expr RPAR
   69     | • LPAR error RPAR

    MINUS       shift, and go to state 55
    PLUS        shift, and go to state 56
    LPAR        shift, and go to state 57
    NOT         shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    NATURAL     shift, and go to state 60
    DECIMAL     shift, and go to state 61

    $default  reduce using rule 40 (OptExpr)

    OptExpr         go to state 62
    FuncInvocation  go to state 63
    Expr            go to state 64


State 45

   27 Statement: IF • Expr LBRACE StarStatementSc RBRACE OptElse
   43 FuncInvocation: • IDENTIFIER LPAR PosExpr RPAR
   44               | • IDENTIFIER LPAR error RPAR
   48 Expr: • Expr OR Expr
   49     | • Expr AND Expr
   50     | • Expr LT Expr
   51     | • Expr GT Expr
   52     | • Expr EQ Expr
   53     | • Expr NE Expr
   54     | • Expr LE Expr
   55     | • Expr GE Expr
   56     | • Expr PLUS Expr
   57     | • Expr MINUS Expr
   58     | • Expr STAR Expr
   59     | • Expr DIV Expr
   60     | • Expr MOD Expr
   61     | • MINUS Expr
   62     | • NOT Expr
   63     | • PLUS Expr
   64     | • NATURAL
   65     | • DECIMAL
   66     | • IDENTIFIER
   67     | • FuncInvocation
   68     | • LPAR Expr RPAR
   69     | • LPAR error RPAR

    MINUS       shift, and go to state 55
    PLUS        shift, and go to state 56
    LPAR        shift, and go to state 57
    NOT         shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    NATURAL     shift, and go to state 60
    DECIMAL     shift, and go to state 61

    FuncInvocation  go to state 63
    Expr            go to state 65


State 46

   32 Statement: PRINT • LPAR Expr RPAR
   33          | PRINT • LPAR STRLIT RPAR

    LPAR  shift, and go to state 66


State 47

   20 FuncBody: LBRACE VarsAndStatements RBRACE •

    $default  reduce using rule 20 (FuncBody)


State 48

   29 Statement: RETURN • OptExpr
   39 OptExpr: • Expr
   40        | ε •  [SEMICOLON]
   43 FuncInvocation: • IDENTIFIER LPAR PosExpr RPAR
   44               | • IDENTIFIER LPAR error RPAR
   48 Expr: • Expr OR Expr
   49     | • Expr AND Expr
   50     | • Expr LT Expr
   51     | • Expr GT Expr
   52     | • Expr EQ Expr
   53     | • Expr NE Expr
   54     | • Expr LE Expr
   55     | • Expr GE Expr
   56     | • Expr PLUS Expr
   57     | • Expr MINUS Expr
   58     | • Expr STAR Expr
   59     | • Expr DIV Expr
   60     | • Expr MOD Expr
   61     | • MINUS Expr
   62     | • NOT Expr
   63     | • PLUS Expr
   64     | • NATURAL
   65     | • DECIMAL
   66     | • IDENTIFIER
   67     | • FuncInvocation
   68     | • LPAR Expr RPAR
   69     | • LPAR error RPAR

    MINUS       shift, and go to state 55
    PLUS        shift, and go to state 56
    LPAR        shift, and go to state 57
    NOT         shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    NATURAL     shift, and go to state 60
    DECIMAL     shift, and go to state 61

    $default  reduce using rule 40 (OptExpr)

    OptExpr         go to state 67
    FuncInvocation  go to state 63
    Expr            go to state 64


State 49

   25 Statement: IDENTIFIER • ASSIGN Expr
   41 ParseArgs: IDENTIFIER • COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR
   42          | IDENTIFIER • COMMA BLANKID ASSIGN PARSEINT LPAR error RPAR
   43 FuncInvocation: IDENTIFIER • LPAR PosExpr RPAR
   44               | IDENTIFIER • LPAR error RPAR

    COMMA   shift, and go to state 68
    LPAR    shift, and go to state 69
    ASSIGN  shift, and go to state 70


State 50

   22 VarsAndStatements: VarsAndStatements VarDecl • SEMICOLON

    SEMICOLON  shift, and go to state 71


State 51

   23 VarsAndStatements: VarsAndStatements Statement • SEMICOLON

    SEMICOLON  shift, and go to state 72


State 52

   31 Statement: ParseArgs •

    $default  reduce using rule 31 (Statement)


State 53

   30 Statement: FuncInvocation •

    $default  reduce using rule 30 (Statement)


State 54

   25 Statement: • IDENTIFIER ASSIGN Expr
   26          | • LBRACE StarStatementSc RBRACE
   26          | LBRACE StarStatementSc • RBRACE
   27          | • IF Expr LBRACE StarStatementSc RBRACE OptElse
   28          | • FOR OptExpr LBRACE StarStatementSc RBRACE
   29          | • RETURN OptExpr
   30          | • FuncInvocation
   31          | • ParseArgs
   32          | • PRINT LPAR Expr RPAR
   33          | • PRINT LPAR STRLIT RPAR
   34          | • error
   35 StarStatementSc: StarStatementSc • Statement SEMICOLON
   41 ParseArgs: • IDENTIFIER COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR
   42          | • IDENTIFIER COMMA BLANKID ASSIGN PARSEINT LPAR error RPAR
   43 FuncInvocation: • IDENTIFIER LPAR PosExpr RPAR
   44               | • IDENTIFIER LPAR error RPAR

    error       shift, and go to state 41
    LBRACE      shift, and go to state 43
    FOR         shift, and go to state 44
    IF          shift, and go to state 45
    PRINT       shift, and go to state 46
    RBRACE      shift, and go to state 73
    RETURN      shift, and go to state 48
    IDENTIFIER  shift, and go to state 49

    Statement       go to state 74
    ParseArgs       go to state 52
    FuncInvocation  go to state 53


State 55

   43 FuncInvocation: • IDENTIFIER LPAR PosExpr RPAR
   44               | • IDENTIFIER LPAR error RPAR
   48 Expr: • Expr OR Expr
   49     | • Expr AND Expr
   50     | • Expr LT Expr
   51     | • Expr GT Expr
   52     | • Expr EQ Expr
   53     | • Expr NE Expr
   54     | • Expr LE Expr
   55     | • Expr GE Expr
   56     | • Expr PLUS Expr
   57     | • Expr MINUS Expr
   58     | • Expr STAR Expr
   59     | • Expr DIV Expr
   60     | • Expr MOD Expr
   61     | • MINUS Expr
   61     | MINUS • Expr
   62     | • NOT Expr
   63     | • PLUS Expr
   64     | • NATURAL
   65     | • DECIMAL
   66     | • IDENTIFIER
   67     | • FuncInvocation
   68     | • LPAR Expr RPAR
   69     | • LPAR error RPAR

    MINUS       shift, and go to state 55
    PLUS        shift, and go to state 56
    LPAR        shift, and go to state 57
    NOT         shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    NATURAL     shift, and go to state 60
    DECIMAL     shift, and go to state 61

    FuncInvocation  go to state 63
    Expr            go to state 75


State 56

   43 FuncInvocation: • IDENTIFIER LPAR PosExpr RPAR
   44               | • IDENTIFIER LPAR error RPAR
   48 Expr: • Expr OR Expr
   49     | • Expr AND Expr
   50     | • Expr LT Expr
   51     | • Expr GT Expr
   52     | • Expr EQ Expr
   53     | • Expr NE Expr
   54     | • Expr LE Expr
   55     | • Expr GE Expr
   56     | • Expr PLUS Expr
   57     | • Expr MINUS Expr
   58     | • Expr STAR Expr
   59     | • Expr DIV Expr
   60     | • Expr MOD Expr
   61     | • MINUS Expr
   62     | • NOT Expr
   63     | • PLUS Expr
   63     | PLUS • Expr
   64     | • NATURAL
   65     | • DECIMAL
   66     | • IDENTIFIER
   67     | • FuncInvocation
   68     | • LPAR Expr RPAR
   69     | • LPAR error RPAR

    MINUS       shift, and go to state 55
    PLUS        shift, and go to state 56
    LPAR        shift, and go to state 57
    NOT         shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    NATURAL     shift, and go to state 60
    DECIMAL     shift, and go to state 61

    FuncInvocation  go to state 63
    Expr            go to state 76


State 57
